[package]
name = "udp_in_tcp"
version = "0.1.0"
authors = ["Michael Zhou <mzhou@cse.unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
maligned = { version = "0.2", features = ["align-4k"] }
tokio = { version = "0.2", features = ["full"] }
